--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^6.1.9",
@@ -34,7 +34,7 @@
     "expo-linking": "~6.2.2",
     "expo-local-authentication": "~13.4.0",
     "expo-notifications": "~0.27.5",
-    "expo-router": "^3.4.0",
+    "expo-router": "^3.5.24",
     "expo-screen-capture": "~6.0.1",
     "expo-secure-store": "~12.8.0",
     "expo-status-bar": "~1.11.1",
@@ -42,9 +42,10 @@
     "react-hook-form": "^7.51.5",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.1",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^4.18.0",
     "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "zustand": "^4.5.2"
